fix: give nav z-index

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,6 +46,8 @@ nav {
   border-bottom: 1px solid #293d6a;
   width: 100vw;
   position: fixed;
+    z-index: 1;
+ 
 }
 
 nav ul {
